--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-    <h2>Dit is een andere titel, die gaat niet over Pim</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, ut.</p>
+    <h2>Dit is een andere titel, die gaat niet over Romy</h2>
+    <h2>Deze titel gaat wel over Pim</h2>
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, ut. Dat is hartstikke handig.</span>
 </body>
 </html>
